--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     implementation group: 'com.zaxxer', name: 'HikariCP'
-    implementation 'junit:junit:4.13.1'
+    implementation 'junit:junit:4.13.2'
     runtimeOnly 'org.postgresql:postgresql'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testImplementation 'org.mockito:mockito-core:4.6.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation group: 'io.rest-assured', name: 'spring-mock-mvc', version: '3.0.0'
 }
 
 tasks.named('test') {
